public/docs/user/1.0/_sources/cli/apptainer.rst.txt
.. _apptainer:

apptainer
---------


Linux container platform optimized for High Performance Computing (HPC) and
Enterprise Performance Computing (EPC)

Synopsis
~~~~~~~~



  Apptainer containers provide an application virtualization layer enabling
  mobility of compute via both application and environment portability. With
  Apptainer one is capable of building a root file system that runs on any
  other Linux system where Apptainer is installed.

::

  apptainer [global options...]

Examples
~~~~~~~~

::


    $ apptainer help <command> [<subcommand>]
    $ apptainer help build
    $ apptainer help instance start

Options
~~~~~~~

::

  -c, --config string   specify a configuration file (for root or unprivileged installation only) (default "/usr/local/etc/apptainer/apptainer.conf")
  -d, --debug           print debugging information (highest verbosity)
  -h, --help            help for apptainer
      --nocolor         print without color output (default False)
  -q, --quiet           suppress normal output
  -s, --silent          only print errors
  -v, --verbose         print additional information

SEE ALSO
~~~~~~~~

* :ref:`apptainer build <apptainer_build>` 	 - Build an Apptainer image
* :ref:`apptainer cache <apptainer_cache>` 	 - Manage the local cache
* :ref:`apptainer capability <apptainer_capability>` 	 - Manage Linux capabilities for users and groups
* :ref:`apptainer checkpoint <apptainer_checkpoint>` 	 - Manage container checkpoint state (experimental)
* :ref:`apptainer config <apptainer_config>` 	 - Manage various apptainer configuration (root user only)
* :ref:`apptainer delete <apptainer_delete>` 	 - Deletes requested image from the library
* :ref:`apptainer exec <apptainer_exec>` 	 - Run a command within a container
* :ref:`apptainer inspect <apptainer_inspect>` 	 - Show metadata for an image
* :ref:`apptainer instance <apptainer_instance>` 	 - Manage containers running as services
* :ref:`apptainer key <apptainer_key>` 	 - Manage OpenPGP keys
* :ref:`apptainer oci <apptainer_oci>` 	 - Manage OCI containers
* :ref:`apptainer overlay <apptainer_overlay>` 	 - Manage an EXT3 writable overlay image
* :ref:`apptainer plugin <apptainer_plugin>` 	 - Manage Apptainer plugins
* :ref:`apptainer pull <apptainer_pull>` 	 - Pull an image from a URI
* :ref:`apptainer push <apptainer_push>` 	 - Upload image to the provided URI
* :ref:`apptainer remote <apptainer_remote>` 	 - Manage apptainer remote endpoints, keyservers and OCI/Docker registry credentials
* :ref:`apptainer run <apptainer_run>` 	 - Run the user-defined default command within a container
* :ref:`apptainer run-help <apptainer_run-help>` 	 - Show the user-defined help for an image
* :ref:`apptainer search <apptainer_search>` 	 - Search a Container Library for images
* :ref:`apptainer shell <apptainer_shell>` 	 - Run a shell within a container
* :ref:`apptainer sif <apptainer_sif>` 	 - Manipulate Singularity Image Format (SIF) images
* :ref:`apptainer sign <apptainer_sign>` 	 - Attach digital signature(s) to an image
* :ref:`apptainer test <apptainer_test>` 	 - Run the user-defined tests within a container
* :ref:`apptainer verify <apptainer_verify>` 	 - Verify cryptographic signatures attached to an image
* :ref:`apptainer version <apptainer_version>` 	 - Show the version for Apptainer

*Auto generated by spf13/cobra on 16-Feb-2023*
